# RPBLC.DAM

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  dam.example.toml  package.json
.codex/: instructions.md
.github/: copilot-instructions.md  secret_scanning.yml
_legacy/: CONTRIBUTING.md
_legacy/crates/dam-core/: Cargo.toml
_legacy/crates/dam-core/src/: config.rs  error.rs  pii_type.rs  reference.rs
_legacy/crates/dam-http/: Cargo.toml
_legacy/crates/dam-http/src/: anthropic_handler.rs  openai.rs  router.rs  upstream_error.rs
_legacy/crates/dam-mcp/: Cargo.toml
_legacy/crates/dam-mcp/src/: lib.rs  server.rs
crates/dam/: Cargo.toml
crates/dam-cli/: Cargo.toml
crates/dam-cli/src/: main.rs
crates/dam-cli/src/commands/: audit.rs  config.rs  consent.rs  daemon.rs  health.rs  init.rs  mcp.rs  mod.rs  scan.rs  serve.rs  status.rs  vault.rs
crates/dam-cli/tests/: consent_flow.rs  error_handling.rs  init_config_flow.rs  scan_roundtrip.rs  security_privacy.rs
crates/dam-consent/: Cargo.toml
crates/dam-consent/src/: lib.rs
crates/dam-daemon/: Cargo.toml
crates/dam-daemon/src/: lib.rs  main.rs
crates/dam-detect/: Cargo.toml
crates/dam-detect/src/: lib.rs  pipeline.rs  stage_ner.rs  stage_regex.rs  stage_xref.rs  validators.rs
crates/dam-detect/src/locales/: ae.rs  ca.rs  de.rs  es.rs  eu.rs  fr.rs  global.rs  mod.rs  mx.rs  sg.rs  uk.rs  us.rs
crates/dam-diagnostics/: Cargo.toml
crates/dam-diagnostics/src/: lib.rs
crates/dam-e2e/: Cargo.toml
crates/dam-e2e/src/: lib.rs
crates/dam-e2e/tests/: local_flow.rs
crates/dam-filter/: Cargo.toml
crates/dam-filter/src/: main.rs
crates/dam-filter/tests/: cli.rs
crates/dam-proxy/: Cargo.toml
crates/dam-proxy/src/: lib.rs  main.rs  providers.rs  websocket.rs
crates/dam-resolve/: Cargo.toml
crates/dam-resolve/src/: derived.rs  lib.rs  main.rs  resolver.rs
crates/dam-resolve/tests/: cli.rs
crates/dam-tray/: Cargo.toml  build.rs
crates/dam-tray/native/: dam_system_extension_activation.m
crates/dam-tray/src/: macos_system_extension.rs  main.rs
crates/dam-vault/: Cargo.toml
crates/dam-vault/src/: audit.rs  consent.rs  encryption.rs  keychain.rs  lib.rs  schema.rs  store.rs
crates/dam-web/: Cargo.toml
crates/dam-web/assets/: bundle.css  bundle.js  index.html
crates/dam-web/src/: activity_map.rs  bootstrap.rs  error.rs  events_bus.rs  guard.rs  main.rs  request_store.rs  server.rs
crates/dam-web/src/api/: activity.rs  allowed.rs  bootstrap_route.rs  connect.rs  events.rs  health.rs  insights.rs  mod.rs  recently_scanned.rs  requests.rs  settings.rs  system.rs  wallet.rs
crates/dam-web/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/dam-web/ui/src/: main.tsx
crates/dam-web/ui/src/app/: router.tsx
crates/dam-web/ui/src/design-system/: index.ts
crates/dam-web/ui/src/design-system/brand/: BracketMark.tsx  BrandLockupGlyphs.tsx  Colon.tsx  ConnectMark.tsx  CornerBracket.tsx  FooterIcon.tsx  RedactionBars.tsx  RedactionLoader.tsx  VaultFrame.tsx  VaultMark.tsx  Wordmark.tsx  WordmarkInteractive.tsx  index.ts
crates/dam-web/ui/src/design-system/components/: AppFooter.tsx  AppIntegrationCard.tsx  Button.tsx  Card.tsx  Consent.tsx  CycleButton.tsx  Dropdown.tsx  EmptyTile.tsx  ErrorTile.tsx  Footer.tsx  Input.tsx  ListView.tsx  PendingRequestBadge.tsx  ProtectionMark.tsx  RankBar.tsx  SearchBar.tsx  Section.tsx  SegmentedControl.tsx  SetupChecklist.tsx  SortHeader.tsx  Stat.tsx  ThemeProvider.tsx  Toggle.tsx  TrayShell.tsx  ValueDetail.tsx  WalletCard.tsx  index.ts
crates/dam-web/ui/src/design-system/styles/: components.css  reset.css
crates/dam-web/ui/src/design-system/tokens/: fonts.css  index.ts  tokens.css  tokens.ts
crates/dam-web/ui/src/features/activity/: ActivityPage.tsx  types.ts
crates/dam-web/ui/src/features/allowed/: AllowedPage.tsx  types.ts
crates/dam-web/ui/src/features/connect/: ConnectPage.tsx  connect-copy.ts  types.ts
crates/dam-web/ui/src/features/health/: HealthPage.tsx  types.ts
crates/dam-web/ui/src/features/insights/: InsightsPage.tsx  types.ts
crates/dam-web/ui/src/features/navigation/: AppShellFooter.tsx  BrandBar.tsx  TrayNavigation.tsx  WebNavigation.tsx  tray-bridge.ts
crates/dam-web/ui/src/features/settings/: SettingsPage.tsx
crates/dam-web/ui/src/features/system/: SystemPage.tsx  types.ts
crates/dam-web/ui/src/features/wallet/: WalletInlineDetail.tsx  WalletListPage.tsx  types.ts
crates/dam-web/ui/src/layouts/: AppShell.tsx
crates/dam-web/ui/src/lib/: i18n.tsx  surface.ts  theme.tsx  url-search.ts
crates/dam-web/ui/src/lib/api/: client.ts  events.ts
crates/dam-web/ui/src/pages/: BlankRoute.tsx
crates/dam-web/ui/src/styles/: app.css
crates/dam/src/: main.rs
crates/damctl/: Cargo.toml
crates/damctl/src/: main.rs
dam-cli/: Cargo.toml
dam-cli/src/: main.rs  mcp.rs
dam-consent/: Cargo.toml
dam-consent/src/: lib.rs  store.rs
dam-core/: Cargo.toml
dam-core/src/: config.rs  connect.rs  destination.rs  error.rs  flow.rs  lib.rs  module_trait.rs  proxy.rs  stream.rs  tls.rs  token.rs  types.rs  wsframe.rs
dam-detect-pii/: Cargo.toml
dam-detect-pii/src/: json_scan.rs  lib.rs  normalize.rs  patterns.rs  validators.rs
dam-detect-secrets/: Cargo.toml
dam-detect-secrets/src/: lib.rs  patterns.rs
dam-filter/: Cargo.toml
dam-filter/src/: main.rs
dam-log/: Cargo.toml
dam-log/src/: lib.rs  store.rs
dam-redact/: Cargo.toml
dam-redact/src/: lib.rs
dam-vault/: Cargo.toml
dam-vault/src/: encrypt.rs  lib.rs  mcp.rs  store.rs  token_mint.rs
docs/: ARCHITECTURE.md  README.md  build-release.md  dam-api.md  dam-config.md  dam-consent.md  dam-core.md  dam-daemon.md  dam-detect.md  dam-diagnostics.md  dam-e2e.md  dam-filter.md  dam-integrations.md  dam-intercept.md  dam-log.md  dam-mcp.md  dam-net-macos.md  dam-net.md  dam-pipeline.md  dam-policy.md  dam-provider-anthropic.md  dam-provider-common.md  dam-provider-openai.md  dam-proxy.md  dam-redact.md  dam-resolve.md  dam-router.md  (+12 more)
(+157 files in other folders)
