[workspace]
members = ["dam-core", "dam-detect-pii", "dam-detect-secrets", "dam-vault", "dam-log", "dam-cli"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal
dam-core = { path = "dam-core" }
dam-detect-pii = { path = "dam-detect-pii" }
dam-detect-secrets = { path = "dam-detect-secrets" }
dam-vault = { path = "dam-vault" }
dam-log = { path = "dam-log" }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.7"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
bytes = "1"
async-stream = "0.3"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"
uuid = { version = "1", features = ["v4"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Detection
regex = "1"
once_cell = "1"
unicode-normalization = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
wiremock = "0.6"
proptest = "1"
tempfile = "3"
