[workspace]
members = [
    "crates/dam",
    "crates/dam-api",
    "crates/dam-config",
    "crates/dam-consent",
    "crates/dam-core",
    "crates/dam-mcp",
    "crates/damctl",
    "crates/dam-detect",
    "crates/dam-e2e",
    "crates/dam-filter",
    "crates/dam-log",
    "crates/dam-policy",
    "crates/dam-proxy",
    "crates/dam-resolve",
    "crates/dam-redact",
    "crates/dam-vault",
    "crates/dam-web",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
axum = "0.7"
bs58 = "0.5"
dam-config = { path = "crates/dam-config" }
dam-consent = { path = "crates/dam-consent" }
dam-api = { path = "crates/dam-api" }
dam-proxy = { path = "crates/dam-proxy" }
dam-core = { path = "crates/dam-core" }
damctl = { path = "crates/damctl" }
dam-detect = { path = "crates/dam-detect" }
dam-e2e = { path = "crates/dam-e2e" }
dam-log = { path = "crates/dam-log" }
dam-policy = { path = "crates/dam-policy" }
dam-resolve = { path = "crates/dam-resolve" }
dam-redact = { path = "crates/dam-redact" }
dam-vault = { path = "crates/dam-vault" }
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
