[package]
name = "dam-consent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DAM vertebra — consent rules, verdict assignment, grant/revoke/check"

[dependencies]
dam-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
