[package]
name = "dam-detect-pii"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DAM vertebra — PII detection patterns and validators"

[dependencies]
dam-core.workspace = true
regex.workspace = true
once_cell.workspace = true
unicode-normalization.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
