[package]
name = "dam-detect-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DAM vertebra — secrets and credentials detection"

[dependencies]
dam-core.workspace = true
regex.workspace = true
once_cell.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
