[package]
name = "dam-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Strip PII and secrets from any text or JSON — no vault, no proxy, just detect and redact"

[[bin]]
name = "dam-filter"
path = "src/main.rs"

[dependencies]
dam-core.workspace = true
dam-detect-pii.workspace = true
dam-detect-secrets.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
