[package]
name = "dam-redact"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DAM vertebra — replaces detected values with vault tokens in request body"

[dependencies]
dam-core.workspace = true
dam-vault.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
