[package]
name = "dam-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DAM vertebra — tokenize, encrypt, store, resolve, MCP server"

[dependencies]
dam-core.workspace = true
rusqlite.workspace = true
aes-gcm.workspace = true
rand.workspace = true
zeroize.workspace = true
sha2.workspace = true
hex.workspace = true
bs58.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
