[package]
name = "dam-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dam"
path = "src/main.rs"

[dependencies]
dam-core = { workspace = true }
dam-vault = { workspace = true }
dam-detect = { workspace = true }
dam-resolve = { workspace = true }
dam-mcp = { workspace = true }
dam-http = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
sys-locale = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
