[package]
name = "dam-consent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bs58.workspace = true
dam-core.workspace = true
rusqlite.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
dam-vault.workspace = true
