[package]
name = "dam-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
dam-config.workspace = true
dam-proxy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
