[package]
name = "dam-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
dam-config.workspace = true
dam-intercept.workspace = true
dam-integrations.workspace = true
dam-net.workspace = true
dam-net-macos.workspace = true
dam-proxy.workspace = true
dam-trust.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
