[package]
name = "dam-detect"
version.workspace = true
edition.workspace = true

[features]
default = []
ner = ["dep:ort"]

[dependencies]
dam-core = { workspace = true }
dam-vault = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
unicode-normalization = "0.1"
ort = { version = "2.0.0-rc.11", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
