[package]
name = "dam-filter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dam-api.workspace = true
dam-config.workspace = true
dam-consent.workspace = true
dam-core.workspace = true
dam-detect.workspace = true
dam-log.workspace = true
dam-policy.workspace = true
dam-redact.workspace = true
dam-vault.workspace = true
serde_json.workspace = true

[dev-dependencies]
dam-log.workspace = true
tempfile.workspace = true
