[package]
name = "dam-proxy"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
dam-api.workspace = true
dam-config.workspace = true
dam-consent.workspace = true
dam-core.workspace = true
dam-detect.workspace = true
dam-log.workspace = true
dam-policy.workspace = true
dam-redact.workspace = true
dam-vault.workspace = true
futures-util.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
