[package]
name = "dam-proxy"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
dam-api.workspace = true
dam-config.workspace = true
dam-consent.workspace = true
dam-core.workspace = true
dam-log.workspace = true
dam-pipeline.workspace = true
dam-policy.workspace = true
dam-provider-openai.workspace = true
dam-vault.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
