[package]
name = "dam-proxy"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
dam-api.workspace = true
dam-config.workspace = true
dam-consent.workspace = true
dam-core.workspace = true
dam-intercept.workspace = true
dam-log.workspace = true
dam-pipeline.workspace = true
dam-policy.workspace = true
dam-provider-anthropic.workspace = true
dam-provider-openai.workspace = true
dam-router.workspace = true
dam-net.workspace = true
dam-trust.workspace = true
dam-vault.workspace = true
futures-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
rcgen.workspace = true
tokio-rustls.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
reqwest.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
