[package]
name = "dam-resolve"
version.workspace = true
edition.workspace = true

[dependencies]
dam-core = { workspace = true }
dam-vault = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
