[package]
name = "dam-resolve"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
dam-api.workspace = true
dam-config.workspace = true
dam-core.workspace = true
dam-log.workspace = true
dam-vault.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
