[package]
name = "dam-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
dam-api.workspace = true
dam-config.workspace = true
dam-consent.workspace = true
dam-core.workspace = true
dam-log.workspace = true
dam-vault.workspace = true
reqwest.workspace = true
tokio.workspace = true
