[package]
name = "dam-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
dam-api.workspace = true
dam-config.workspace = true
dam-consent.workspace = true
dam-core.workspace = true
dam-daemon.workspace = true
dam-diagnostics.workspace = true
dam-integrations.workspace = true
dam-log.workspace = true
dam-net.workspace = true
dam-net-macos.workspace = true
dam-trust.workspace = true
dam-vault.workspace = true
futures-util.workspace = true
libc = "0.2"
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
tempfile.workspace = true
