[package]
name = "dam"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
dam-api.workspace = true
dam-config.workspace = true
dam-daemon.workspace = true
dam-diagnostics.workspace = true
dam-intercept.workspace = true
dam-integrations.workspace = true
dam-net.workspace = true
dam-net-macos.workspace = true
dam-proxy.workspace = true
dam-trust.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
