[package]
name = "damctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dam-api.workspace = true
dam-config.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
