[package]
name = "dam-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
