[package]
name = "dam-http"
version.workspace = true
edition.workspace = true

[dependencies]
dam-core = { workspace = true }
dam-vault = { workspace = true }
dam-detect = { workspace = true }
dam-resolve = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tempfile = { workspace = true }
