[package]
name = "dam-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
dam-core = { workspace = true }
dam-vault = { workspace = true }
dam-detect = { workspace = true }
dam-resolve = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
